# ETL-EDA-Contratos_Pesca

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ETL.md  SETUP.md
src/: __init__.py
src/ETL/: __init__.py  extract.py  persist.py  transform.py
src/ETL/data/: empleoPlantasDeProceso2006.csv  empleoPlantasDeProceso2007.csv
src/config/: __init__.py  data.py  db.py
