[tool.poetry]
name = "analisis-contratos-pesca"
version = "0.1.0"
description = ""
authors = ["Cristian Orellana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pandas = "^2.3.0"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.0"
ruff = "^0.12.0"
psycopg2-binary = "^2.9.10"
plotly-express = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
